<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hospital.HospitalFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="160dp"
            android:layout_height="306dp"
            android:elevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/imgrstobing"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/rsfltobingsibolga" />

                <TextView
                    android:id="@+id/txtrstobing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgrstobing"
                    android:layout_marginTop="13dp"
                    android:text="@string/rstobing"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtrstobing"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/txtalmttobing"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txttelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtalamat"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/tlprstobing"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txtweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txttelp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/txtwebrstobing"
                    android:textColor="@color/teal_700"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="306dp"
            android:elevation="2dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/imgrsmetta"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/rsmetta" />

                <TextView
                    android:id="@+id/txtrsmetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgrsmetta"
                    android:layout_marginTop="13dp"
                    android:text="@string/rsmetta"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/txtalamatmetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtrsmetta"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/txtalmtmetta"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txttelpmetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtalamatmetta"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/tlprsmetta"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txtwebmetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txttelpmetta"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/txtwebrsmetta"
                    android:textColor="@color/teal_700"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="270dp"
            android:elevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.748">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/imgrspandan"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/rspandan" />

                <TextView
                    android:id="@+id/txtrspandan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgrspandan"
                    android:layout_marginTop="13dp"
                    android:text="@string/txtalmtpandan"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtalamtpandan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtrspandan"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/txtalmtpandan"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txttelppandan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtalamtpandan"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/tlprspandan"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/txtwebpandan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txttelppandan"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/txtwebrspandan"
                    android:textSize="9sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>